This version:
  - insert image tool (based on patches by Victor Saase and Simon Guest)
  - renamed "Journal" menu to "Page"

Version 0.4.6 (May 22, 2012):
  - win32 portability code (contributed by Dirk Gerrits)
  - fix bug in PDF export code on 64-bit systems (patch by Robert Buchholz)
  - fix hand tool bug when exiting canvas (#2905711)
  - Italian translation (Marco Poletti), German translation (Stefan Lembach)
  - Spanish translation (Alvaro), Brazil Portuguese translation (Marco Souza)
  - fix save bug with text boxes containing > 4095 characters
  - Czech translation (David Kolibac), Dutch translation (Timo Kluck)
  - fix crash upon unplugging input devices
  - change close dialog box default to "save" (patch by Kit Barnes)
  - option to force PDF background rendering via cairo (slower but nicer)
  - wrapper for missing GdkPixbuf rendering function in newest poppler
  - disable GTK+ XInput bugfix by default (#3429416)
  - fix linker flags (#3208984); evdev coordinate fix (#3244118) (Timo Kluck)
  - specify license version: GPL v2 or later
  - fix 1.#J coordinates from win32 xoj files

Version 0.4.5 (Oct 2, 2009):
  - bugfixes for GTK+ 2.16/2.17 issues with xinput events
  - various minor UI bugfixes
  - gettext internationalization (contributed by David Planella)
  - Catalan translation (by David Planella), French translation
  - use poppler instead of pdftoppm to render PDF backgrounds 
    (after patches by Mike Ter Louw and Bob McElrath)
  - various improvements to UI and to key bindings (including
    patches by Bob McElrath and Lu Zhihe)
  - use gtk-print instead of libgnomeprint for printing
  - custom color chooser (patch contributed by Alex Ray)
  - option to have tablet buttons toggle the mapping rather than draw
  - paper color chooser (after a patch by Ole Joergen Broenner)
  - remove binary installer (due to binary incompatibilities)
  - UPDATED DEPENDENCIES: need gtk+ 2.10, poppler-glib 0.5.4

Version 0.4.2.1 (Mar 27, 2008):