@@ -52,5 +52,6 @@ void end_text(void);
 void update_text_item_displayfont(struct Item *item);
 void rescale_text_items(void);
 struct Item *click_is_in_text(struct Layer *layer, double x, double y);
+struct Item *click_is_in_text_or_image(struct Layer *layer, double x, double y);
 void refont_text_item(struct Item *item, gchar *font_name, double font_size);
 void process_font_sel(gchar *str);
